Replace `Paths.get` with `Path.of` from Java 11
PiperOrigin-RevId: 600588020