@@ -43,7 +43,6 @@ import java.nio.charset.CharacterCodingException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -726,7 +725,7 @@ public final class SourceFile implements StaticSourceFile {
 
       return new SourceFile(
           new CodeLoader.OnDisk(
-              (this.pathWithFilesystem != null) ? this.pathWithFilesystem : Paths.get(this.path),
+              (this.pathWithFilesystem != null) ? this.pathWithFilesystem : Path.of(this.path),
               this.charset),
           displayPath,
           this.kind);
