@@ -28,7 +28,6 @@ import com.google.errorprone.annotations.CheckReturnValue;
 import com.google.errorprone.annotations.Immutable;
 import com.google.javascript.jscomp.deps.DependencyInfo;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 import java.util.function.Function;
 import org.jspecify.nullness.Nullable;
@@ -85,7 +84,7 @@ public abstract class Source {
         .setEstimatedSize(0);
   }
 
-  private static final Path DEV_NULL = Paths.get("/dev/null");
+  private static final Path DEV_NULL = Path.of("/dev/null");
 
   // Internal-only properties: the code suppliers are necessary for lazy bundling,
   // but we cannot use an ordinary supplier since we need guarantees about equals and
