@@ -23,7 +23,7 @@ import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.testing.EqualsTester;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -45,8 +45,8 @@ public final class SourceTest {
             Source.builder().setCode("foo").build())
         .addEqualityGroup(Source.builder().setCode("bar").build())
         .addEqualityGroup(
-            foo.toBuilder().setPath(Paths.get("/x")).build(),
-            foo.toBuilder().setPath(Paths.get("/x")).build())
+            foo.toBuilder().setPath(Path.of("/x")).build(),
+            foo.toBuilder().setPath(Path.of("/x")).build())
         .addEqualityGroup(
             foo.toBuilder().setOriginalCode("bar").build(),
             foo.toBuilder().setOriginalCode("bar").build())
